--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         body {
             margin: 0;
-            background-image: url('./img/main2.jpg');
+            background-image: url('./main2.jpg');
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -156,7 +156,7 @@
     </div>
 
     <script>
-        const validUsername = "2401076";
+        const validUsername = "1234";
         const validPassword = "1234";
 
         function login() {
