--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
                 // 3초 동안 로딩 애니메이션을 보여준 후 사이트로 이동
                 setTimeout(() => {
-                    window.location.href = "https://discord.gg/kDEtjnJs"; // 사이트로 이동
+                    window.location.href = "https://discord.com/invite/bWNSTxWz"; // 사이트로 이동
                 }, 1500); // 3초 후 사이트로 이동
             } else {
                 alert("Invalid username or password.");
